Correcting some layout issues.

--- a/src/base_styles/scaffold.less
+++ b/src/base_styles/scaffold.less
@@ -4,7 +4,6 @@ main {
     & > section {
         height: ~"calc(100% - @{height_nav-main})";
         box-sizing: border-box;
-        padding: 0 2rem;
         overflow-y: auto;
         overflow-x: hidden;
     }
