--- a/src/features/portfolio/portfolio.less
+++ b/src/features/portfolio/portfolio.less
@@ -31,6 +31,7 @@ section[data-page="portfolio"] {
     }
 
     div.portfolio {
+        position: relative;
 
         section.all-up {
             background: brown;
@@ -41,7 +42,7 @@ section[data-page="portfolio"] {
         }
 
         nav.portfolio {
-            position: fixed;
+            position: absolute;
             bottom: 0;
             left: 0;
             right: 0;
