--- a/src/features/portfolio/splash.less
+++ b/src/features/portfolio/splash.less
@@ -4,6 +4,7 @@ section[data-page="portfolio"] {
 
         display: flex;
         flex-flow: column nowrap;
+        padding: 0 2rem;
 
         &, .row.horizontal {
             align-items: center;
